tests/bad/value_enums/wrong_type_in_field.oc
/// fail: Couldn't find this identifier: Baz

enum Foo {
    Foo(num: i32)
    Bar(baz: Baz)
}

def main() {
    let x: i32
}
